--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.3",
     "@liveblocks/client": "^1.12.0",
+    "@liveblocks/node": "^1.12.0",
     "@liveblocks/react": "^1.12.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
